# MacVdesktop

./: .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-04-13-mac-telemetry-tauri-migration.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  powermetrics_helper.py  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: apple_smc.rs  helper_manager.rs  lib.rs  llm_runtime.rs  main.rs  runtime_settings.rs  telemetry.rs
src/components/: Agent.test.tsx  Agent.tsx  Dashboard.test.tsx  Dashboard.tsx  LlmRuntimePanel.tsx  MetricsPanel.test.tsx  MetricsPanel.tsx  ServerRack.tsx  ServerRoom.tsx  TelemetrySparkline.tsx
src/components/scene/: FactoryAgentLayer.tsx  FactoryAmbientEffects.tsx  FactoryCoreShell.tsx  FactoryInfrastructure.tsx  FactoryModuleLayer.tsx  FactoryPathNetwork.tsx  FactoryZones.tsx  index.ts
src/domain/llmRuntime/: types.ts
src/domain/telemetry/: browserSnapshot.test.ts  browserSnapshot.ts  history.test.ts  history.ts  layout.ts  summary.test.ts  summary.ts  types.ts
src/hooks/: useLlmRuntime.ts  useSimulation.ts  useTelemetry.ts
src/integrations/llmRuntime/: provider.ts  tauriProvider.ts
src/integrations/telemetry/: provider.ts  tauriProvider.ts
src/lib/: inspectionAgents.test.ts  inspectionAgents.ts  llmRuntimeViewModel.test.ts  llmRuntimeViewModel.ts  metricsPanelViewModel.ts  runtime.test.ts  runtime.ts  sceneChoreography.test.ts  sceneChoreography.ts  sceneModel.test.ts  sceneModel.ts  telemetryViewModels.test.ts  telemetryViewModels.ts
